<resources>
    <string name="api_key">AIzaSyCVAqwbGyX4SHn6FM9ACguWgVbtdh9BWNM</string>
    <string name="app_name">Commune Chat</string>
    <string name="nav_tab1">Contacts</string>
    <string name="nav_tab2">Chat</string>
    <string name="nav_tab3">Explore</string>
    <string name="nav_tab4">Me</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout_description">Are you sure you want to log out?</string>
    <string name="status">Status</string>
    <string name="logout">Logout</string>
    <string name="search">Search ID</string>
    <string name="search_category">Search by category</string>
    <string name="search_nearby">Explore nearby friends</string>
    <string name="search_recommend">Suggested friends</string>
    <string name="search_localchat">Join the local chat!</string>
    <string name="send_message">Send Message</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="friend_request">Friend Requests</string>
    <string name="privacy_control">Privacy control</string>
    <string name="privacy_control_info">Privacy control protects your personal information from being leaked in messages. Turn this off will allow those messages to be sent, but warnings will still be given.</string>
    <string name="storage_path">Media storage path</string>
    <string name="about">About us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_pinned_message">Check pinned message</string>
    <string name="settings">Settings</string>
    <string name="splitter">,</string>
    <string name="no_internet">No internet connection</string>
    <string name="wrong_username_pass">Wrong username or password</string>
    <string name="register_account"><u>Register an account</u></string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_title">Register new user account</string>
    <string name="notice">Notice</string>
    <string name="no_internet_connection">No internet connection. Please try again</string>
    <string name="empty_username_password">Please enter your username and password</string>
    <string name="loading">Loading…</string>
    <string name="wrong_username_password">Wrong username or password</string>
    <string name="check_username_password">Please check if you have typed correct username and password</string>
    <string name="duplicated_username">Username already existed</string>
    <string name="try_again_username">The username already existed. Please try another one</string>
    <string name="failed">Failed</string>
    <string name="failed_register">Failed to register an account</string>
    <string name="register_success">Successfully registered an account. Please proceed to configure your proifle and try to login with your new account</string>
    <string name="success">Success</string>
    <string name="find_friend">Find friend</string>
    <string name="friend_list">Friend list</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="default_image">Default image</string>
    <string name="find_by_programme">Find by programme</string>
    <string name="find_by_programme_desc">Find those who study in the same programme with you</string>
    <string name="find_by_tut">Find by tutorial group</string>
    <string name="find_by_tut_desc">Recommended for freshman</string>
    <string name="find_by_address">Find by address</string>
    <string name="find_by_address_desc">Find those who may be living around you</string>
    <string name="find_by_age">Find by age</string>
    <string name="find_by_age_desc">Maybe you prefer to befriend with people of same age</string>
    <string name="suggest_friend">Suggest me any friend</string>
    <string name="suggest_friend_desc">No idea what to choose? Try me!</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="detail">Detail</string>
    <string name="exit_login">Tap again to exit</string>
    <string name="student_details">Student Details</string>
    <string name="faculty">Faculty</string>
    <string name="tutorial_group">Tutorial group</string>
    <string name="course">Course</string>
    <string name="personal_information">Personal Information</string>
    <string name="nric">NRIC</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="no">No</string>
    <string name="find_by_location">Find by GPS</string>
    <string name="find_by_location_desc">Find anyone who may be around you. Require GPS</string>
    <string name="gps_not_found">GPS not found</string>
    <string name="gps_not_found_desc1">Do you want to enable GPS to enjoy the best feature?</string>
    <string name="gps_not_found_desc2">This feature require GPS. Do you want to turn on your GPS?</string>
    <string name="password_register">Password (Minimum 5 characters)</string>
    <string name="title_activity_fragment_friend_list">fragment_friend_list</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_add_private">AddPrivateActivity</string>
    <string name="title_activity_select_contact">SelectContactActivity</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="chat_notification">Chat Notification</string>
    <string name="notification_key">notification_key</string>
    <string name="mute">Mute</string>
    <string name="mute_key">mute_key</string>
    <string name="sound">Notification Sound</string>
    <string name="ring_tone_pref">ring_tone_pref</string>
    <string name="pop_up">pop_up</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="group_mute_key">group_mute_key</string>
    <string name="group_pop_up">group_pop_up</string>
    <string name="group_ring_tone_pref">group_ring_tone_pref</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_first_section">Notifications</string>
    <string name="title_second_section">Chat Contents</string>
    <string name="summary_message_preview">You can view message via notification</string>
    <string name="key_auto_download">key_auto_download</string>
    <string name="title_auto_download">Auto download</string>
    <string name="summary_upload_over_wifi">Automatically download the videos and image</string>
    <string name="notif_action_reply"></string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_preview_key">message_preview_key</string>
    <string name="title_activity_group_management">GroupManagementActivity</string>
    <string name="subtitle_message_notification">Message Notification</string>
    <string name="subtitle_group_notification">Group Message Notification</string>
    <string name="profile_placeholderName">Gan Nar Psy</string>
    <string name="profile_placeholderUid">1</string>
    <string name="profile_placeholderGender">Male</string>
    <string name="profile_placeholderStudentID">1709411</string>
    <string name="profile_placeholderFaculty">FOCS</string>
    <string name="profile_placeholderTutGroup">RSD3 Group 2 May</string>
    <string name="type_here">Type here</string>
    <string name="you">You</string>
    <string name="exit_group">Exit group</string>
    <string name="add_people">Add people</string>
    <string name="remove_people">Remove people</string>
    <string name="see_group_info">See group info</string>
    <string name="exit_group_desc">Are you sure? This can\'t be undone</string>
    <string name="yes">Yes</string>
    <string name="exit_group_success_desc">You have exited from this group</string>
    <string name="participants">Participants</string>
    <string name="no_result">No result</string>
    <string name="get_participant_add_desc">Did not find any available friend to add into the group chat</string>
    <string name="search_1">Search</string>
    <string name="reset">Reset</string>
    <string name="year">Year</string>
    <string name="advanced_search_title">Select at least one criteria</string>
    <string name="introduction">Introduction</string>
    <string name="introduction_desc">Commune chat system is a chatting mobile application developed by Tunku Abdul Rahman University College students.
    This application adopted MQTT protocol to control traffic and conserve bandwidth usage. The front end programming languages used here is Java and Kotlin,
        while back-end is using PHP and Node.JS, database used here is MySQL.</string>
    <string name="contributors">Contributors</string>
    <string name="supervisor_miss_pua_bee_lian">Supervisor: Miss Pua Bee Lian</string>
    <string name="contributor_1">\u2022 Lim Fang Chun (RSD)</string>
    <string name="contributor_2">\u2022 Gan Zhen Jie (RSD)</string>
    <string name="contibutor_3">\u2022 Phuah Wai Yan (RSD)</string>
    <string name="contibutor_4">\u2022 Quek Wai Jian (RSD)</string>
</resources>