<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/chat"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_find_friend"
        android:icon="@drawable/ic_search"
        android:title="@string/find_friend"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_add_friend"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/add_friend"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>