<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedSearchActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:padding="3dp"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_margin="5dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:cardBackgroundColor="@color/colorGrey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="@string/faculty" />

                <Spinner
                    android:id="@+id/spinner_faculty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_margin="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="@string/course" />

                <Spinner
                    android:id="@+id/spinner_course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_margin="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="@string/year" />

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_margin="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:minWidth="200dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:text="@string/tutorial_group" />

                <Spinner
                    android:id="@+id/spinner_tutorialGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="3dp"
                    android:padding="3dp"
                    android:scrollbars="vertical"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_search"
        android:text="@string/search_1"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:textColor="@color/white" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_reset"
        android:text="@string/reset"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_rectangle"
        android:textSize="20sp"
        android:textColor="@color/white" />
</LinearLayout>