<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView_profilePic"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/default_image"
        app:srcCompat="@drawable/ic_person" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView_profilePic"
        android:layout_toStartOf="@+id/linear_button"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="Username" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="Description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_button"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/button_add"
            android:text="@string/add"
            android:textSize="12sp"
            android:padding="0dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/button_detail"
            android:text="@string/detail"
            android:textSize="12sp"
            android:padding="0dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_userID"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="ID"
        android:enabled="false"
        android:visibility="gone"/>
</RelativeLayout>